--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^7.3.6",
 		"@prisma/adapter-pg": "^7.1.0",
 		"@prisma/client": "^7.1.0",
+		"@tanstack/react-query": "^5.90.15",
 		"@tinymce/tinymce-react": "^6.3.0",
 		"dotenv": "^17.2.3",
 		"googleapis": "^168.0.0",
@@ -26,6 +27,7 @@
 		"react-hook-form": "^7.68.0"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.91.2",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.1",
 		"@types/node": "^20.19.26",
