--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^17.2.3",
 		"googleapis": "^168.0.0",
 		"next": "^16.0.10",
+		"openai": "^6.16.0",
 		"pg": "^8.16.3",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
